test/corpus/function-call.test
===========
simple call
===========
if: myFunction()
---
(pair
  key: (if_key)
  value: (expression
    (function_call
      function: (identifier))))

=======================
simple call (delimited)
=======================
if: ${{ myFunction() }}
---
(pair
  key: (if_key)
  value: (delimited_expression
    (function_call
      function: (identifier))))

================
single context as parameter
================
if: toJSON(job)
---
(pair
  key: (if_key)
  value: (expression
    (function_call
      function: (identifier)
      arguments: (context
        (identifier)))))

===============================
literal as parameter
===============================
if: fromJSON('{"key":"value"}')
---
(pair
  key: (if_key)
  value: (expression
    (function_call
      function: (identifier)
      arguments: (literal
        (string
          (string_content))))))
